--- a/styleIndex.css
+++ b/styleIndex.css
@@ -163,3 +163,35 @@ img {
         margin: 10px 0;
     }
 }
+
+/* Responsiveness */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    img {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+
+    table {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .orange-box {
+        padding: 10px;
+    }
+
+    .scroll-to-top {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+    }
+}
