--- a/css/calculator.css
+++ b/css/calculator.css
@@ -40,18 +40,13 @@ nav {
 nav ul {
     list-style: none;
     display: flex;
-    align-items: center;
+    justify-content: space-evenly; /* Espacement égal entre les éléments */
     margin: 0;
     padding: 0;
-    justify-content: space-between; /* Espacement entre les éléments */
-}
-
-nav ul img {
-    margin-right: 15px;
 }
 
 nav ul li {
-    margin: 0 25px; /* Augmentation de l'espacement entre les éléments */
+    padding: 0 20px; /* Padding entre chaque élément pour plus d'espace */
 }
 
 nav ul li a {
@@ -193,7 +188,7 @@ button:hover {
 }
 
 /* Responsive Design */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
     nav ul {
         display: none; /* Masquer le menu horizontal */
     }
@@ -220,7 +215,7 @@ button:hover {
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 500px) {
     body {
         font-size: 14px;
     }
