--- a/styleIndex.css
+++ b/styleIndex.css
@@ -265,3 +265,19 @@ img {
     border-radius: 5px;
     margin-bottom: 20px;
 }
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+/* Individual card styling */
+.card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    flex: 0 0 30%; /* Adjust the width of each card to 30% */
+    box-sizing: border-box; /* Ensure padding and border are included in the width */
+}
