--- a/styleIndex.css
+++ b/styleIndex.css
@@ -32,6 +32,7 @@ body {
 
 /* Navigation */
 nav {
+    display: block;
     background-color: black;
     padding: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
